k8s/deployment-update-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: update
  name: update
  namespace: update
spec:
  replicas: 3
  selector:
    matchLabels:
      app: update
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: update
    spec:
      containers:
      - image: httpd:2.4.57
        name: httpd
