k8s/pod-lab2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: lab2
  name: lab2
  namespace: prod
spec:
  containers:
  - image: httpd
    name: lab2
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
