k8s/pod-lab3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: lab3
  name: lab3
  namespace: prod
spec:
  containers:
  - image: httpd
    name: lab3
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
