k8s/pod-lab4.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: lab4
  name: lab4
  namespace: prod
spec:
  containers:
  - image: httpd
    name: lab4
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
