k8s/service-cip.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: update
  name: myapp-svc-cip
spec:
  type: ClusterIP
  selector:
    app: update
  ports:
    - port: 90
      targetPort: 80
