k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: update
  name: myapp-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: update
  ports:
    - port: 90
      targetPort: 80
      nodePort: 30500
