k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: update
  name: myapp-svc-np
spec:
  type: NodePort
  selector:
    app: update
  ports:
    - port: 90
      targetPort: 80
      nodePort: 30000
