k8s/service-web-application.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: tasks
  name: web-application
spec:
  type: NodePort
  selector:
    app: nginx-deploy
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30083
