k8s/service-web2-application.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: tasks
  name: web2-application
spec:
  type: LoadBalancer
  selector:
    app: nginx-deploy
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30073
